src/test/deca/context/invalid/SansObjet/DeclVar-Mult-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using * operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    float y = 3.14; 
    boolean z = 5 * 3.14; 
}
